# myclaptest

./: Cargo.toml  README.md  readme.md
.github/workflows/: cd.yaml
src/: main.rs
