[package]
name = "app-cli"
version = "0.1.1"
edition = "2021"
description = "A short description of my package"
documentation = "https://www.github.com/skbhati199/rust_app_cli"
authors = ["Sonu Kumar", "skbhati199@gmail.com"]
repository = "https://www.github.com/skbhati199/rust_app_cli"
keywords = ["cli", "tools"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
